Bug 116510 - Divs with border-radius is not painted correctly while using jQuery's .slideToggle()
Summary: Divs with border-radius is not painted correctly while using jQuery's .slideT...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords: BlinkMergeCandidate, GoodFirstBug, InRadar
Depends on:
Blocks:
 
Reported: 2013-05-20 19:47 PDT by Ryosuke Niwa
Modified: 2022-09-01 08:35 PDT (History)
9 users (show)

See Also:


Attachments
Test case (748 bytes, text/html)
2022-08-22 12:18 PDT, Simon Fraser (smfr)
no flags Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ryosuke Niwa 2013-05-20 19:47:48 PDT
We should probably merge https://chromium.googlesource.com/chromium/blink/+/49b9865e7b388fffc4f4e5591e2cbae459afffd6

If a border-radius exists, repaintAfterLayoutIfNeeded should check if
a border-radius for old bounds is the same as a border-radius for new bounds.
If the border-radiuses are not the same, delta repaint cannot be used.
Comment 1 Ahmad Saleem 2022-08-20 23:56:33 PDT
Missing change needed in RoundedRect.h:

https://github.com/WebKit/WebKit/blob/36b150fc817675a614982ca0b70649a26d7b013f/Source/WebCore/platform/graphics/RoundedRect.h#L122

and RenderObject Change - I couldn't manage to figure but it might be here:

https://github.com/WebKit/WebKit/blob/4385a00da760f9db033925547caa238d3a9f0885/Source/WebCore/rendering/RenderElement.cpp#L1183

and it is still missing.

Just wanted to update based on my knowledge but I am not so sure on second part. Thanks!
Comment 2 Simon Fraser (smfr) 2022-08-22 12:18:36 PDT
Created attachment 461800 [details]
Test case

Test case confirms that we have a bug
Comment 3 Vitor Roriz 2022-08-24 14:18:13 PDT
Pull request: https://github.com/WebKit/WebKit/pull/3624
Comment 4 EWS 2022-09-01 08:34:19 PDT
Committed 254041@main (01b7c37f84bf): <https://commits.webkit.org/254041@main>

Reviewed commits have been landed. Closing PR #3624 and removing active labels.
Comment 5 Radar WebKit Bug Importer 2022-09-01 08:35:15 PDT
<rdar://problem/99440767>