Divs with border-radius are not repainted correctly when bounds change https://bugs.webkit.org/show_bug.cgi?id=116510

Reviewed by Alan Bujtas.

* LayoutTests/imported/blink/fast/repaint/border-radius-repaint-2-expected.txt: Added.
* LayoutTests/imported/blink/fast/repaint/border-radius-repaint-2.html: Added.
* LayoutTests/platform/ios/fast/repaint/border-radius-repaint-2-expected.txt: Added.
* LayoutTests/platform/win/fast/repaint/border-radius-repaint-2-expected.txt: Added.
* LayoutTests/platform/gtk/fast/repaint/border-radius-repaint-2-expected.txt: Added.
* LayoutTests/platform/mac-bigsur-wk1/fast/repaint/border-radius-repaint-2-expected.txt: Added.
Adding new repaint reduced test and expected files

* Source/WebCore/platform/graphics/RoundedRect.h:
(WebCore::operator!=):
Adding operator!= for RoundedRect::Radii

* Source/WebCore/rendering/RenderElement.cpp:
(WebCore::RenderElement::repaintAfterLayoutIfNeeded):
If bounds have changd and the element has border-radius, we should issue a full repaint
if border-radius for new bounds differs from old one.

Canonical link: https://commits.webkit.org/254041@main